Se da formato al ts y html

--- a/src/app/ngbd-modal-content/ngbd-modal-content.component.html
+++ b/src/app/ngbd-modal-content/ngbd-modal-content.component.html
@@ -9,5 +9,6 @@
   <p>¿Desea eliminar este elemento?</p>
 </div>
 <div class="modal-footer">
-  <button name="delete" type="button" ngbAutofocus class="btn btn-outline-dark" (click)="deleteItem(index)">Confirmar</button>
+  <button name="delete" type="button" ngbAutofocus class="btn btn-outline-dark"
+    (click)="deleteItem(index)">Confirmar</button>
 </div>
