--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,16 +3,19 @@
         <button mat-button name="inicio" routerLink="libretas" (click)="drawer.toggle()">Inicio</button>
         <button class="mat-button" name="libretas" mat-button routerLink="libreta-media-carta"
             (click)="drawer.toggle()">Libretas</button>
-        <button class="mat-button" name="bolsillo" mat-button routerLink="libreta-bolsillo" (click)="drawer.toggle()">Libretas de
+        <button class="mat-button" name="bolsillo" mat-button routerLink="libreta-bolsillo"
+            (click)="drawer.toggle()">Libretas de
             bolsillo</button>
-        <button class="mat-button" name="admin" mat-button routerLink="new-libreta" (click)="drawer.toggle()">Admin</button>
-        <button class="mat-button" name="carrito" mat-button routerLink="shopping-cart" (click)="drawer.toggle()">Carrito de la
+        <button class="mat-button" name="admin" mat-button routerLink="new-libreta"
+            (click)="drawer.toggle()">Admin</button>
+        <button class="mat-button" name="carrito" mat-button routerLink="shopping-cart"
+            (click)="drawer.toggle()">Carrito de la
             compra</button>
     </mat-drawer>
     <div class="sidenav-content">
         <mat-toolbar color="primary">
             <mat-toolbar-row class="toolbar">
-                <button name="menu" aria-hidden="true" class="nav-link1"  mat-icon-button (click)="drawer.toggle()">
+                <button name="menu" aria-hidden="true" class="nav-link1" mat-icon-button (click)="drawer.toggle()">
                     <mat-icon>menu</mat-icon>
                 </button>
                 <span class="spacer"></span>
