--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -4,8 +4,8 @@
         <div [@shoppingAnimation]="animationState" *ngFor="let notebook of buyOfNotebooks; let i = index">
             <p class="list-items">{{i + 1}})</p>
             <p>{{notebook.model}} </p>
-            <svg (click)="openModal(i)" ngbAutofocus class="bi bi-x-square" width="1.5em" height="1.5em" viewBox="0 0 16 16"
-                fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <svg (click)="openModal(i)" ngbAutofocus class="bi bi-x-square" width="1.5em" height="1.5em"
+                viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd"
                     d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
                 <path fill-rule="evenodd"
